# mtg

./: .gitignore  Cargo.toml  pixi.toml  project-utf8.dot  project.dot
src/: app.rs  lib.rs  main.rs  multiplatform.rs
src/app/: bot.rs  card.rs  card_attribute.rs  card_library.rs  cards_positions.rs  combat_engine.rs  creature_positions.rs  error.rs  game_state.rs  game_state_updater.rs  gre.rs  ocr.rs  state.rs  ui.rs
src/app/gre/: effect_resolution.rs  gre_structs.rs  mod.rs  stack.rs  trigger.rs
src/app/state/: attack_phase_state.rs  combat_damage_state.rs  first_main_phase_state.rs  mulligan_state.rs  opponents_turn_state.rs  second_main_phase_state.rs  start_state.rs  submit_state.rs
src/multi_platform/: mod.rs  wayland_platform.rs  windows_platform.rs  x11_platform.rs
src/tests/: card_interaction_tests.rs  combo_tests.rs  mechanics.rs  tests.rs
tests/: card_attribute_test.rs  card_library_test.rs  combo_mechanics_test.rs  creature_reading_test.rs  game_state_test.rs  game_state_updater_test.rs  gre_test.rs
