[package]
name = "MTGA_me"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
screenshots = "0.8.10"
image = "0.25.5"
once_cell = "1.20.3"
nix = "0.29"
imageproc = "0.25"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.11.1"
bitflags = "2.9.0"
thiserror = "2.0.12"
time = "0.3.39"
winapi = "0.3.9"
libc = "0.2.170"
enigo = "0.3.0"

